crosshatch: Set CPUInfoService thermal sysfs path
So the temp will show when CPUInfo is on the screen

Change-Id: I9ca6fe495e3fc4d1f0d6972b4babe9c7d73b66de
Signed-off-by: mydongistiny <jaysonedson@gmail.com>

--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -36,4 +36,7 @@
 
     <!-- Doze: whether the double tap sensor reports 2D touch coordinates -->
     <bool name="doze_double_tap_reports_touch_coordinates">true</bool>
+
+    <!-- CPUInfoService temperature sysfs path -->
+    <string name="config_cpuinfoSysTemp" translatable="false">/sys/class/thermal/thermal_zone21/temp</string>
 </resources>
